update CF manifest in install_cf_openstack.html